@@ -81,9 +81,6 @@ __DATA__
 #!/usr/bin/env perl
 use Mojolicious::Lite;
 
-# Documentation browser under "/perldoc"
-plugin 'PODRenderer';
-
 get '/' => sub {
   my $c = shift;
   $c->render(template => 'index');
@@ -96,8 +93,6 @@ app->start;
 %% layout 'default';
 %% title 'Welcome';
 <h1>Welcome to the Mojolicious real-time web framework!</h1>
-To learn more, you can browse through the documentation
-<%%= link_to 'here' => '/perldoc' %>.
 
 <% %>@@ layouts/default.html.ep
 <!DOCTYPE html>
