@@ -1,15 +1,15 @@
+%# DEPRECATED!
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= $title %></title>
     %= javascript '/mojo/prettify/run_prettify.js'
-    %= stylesheet '/mojo/prettify/prettify-mojo-light.css'
     <style>
       a { color: inherit }
       a:hover { color: #2a2a2a }
       a img { border: 0 }
       body {
-        background: url(<%= url_for '/mojo/pinstripe-light.png' %>);
+        background: #fff;
         color: #445555;
         font: 0.9em 'Helvetica Neue', Helvetica, sans-serif;
         font-weight: normal;
